class CodeHardener:
    """
    A class used to harden the given code

    ...

    Attributes
    ----------
    None

    Methods
    -------
    harden_code(code: str) -> str:
        Hardens the given code and returns the hardened code
    """

    def harden_code(self, code: str) -> str:
        """
        Hardens the given code

        Parameters:
        code (str): The code to be hardened

        Returns:
        str: The hardened code
        """

        # Implement the code hardening logic here
        hardened_code = self._add_error_handling(code)
        hardened_code = self._improve_security(hardened_code)

        return hardened_code

    def _add_error_handling(self, code: str) -> str:
        """
        Adds error handling to the given code

        Parameters:
        code (str): The code to which to add error handling

        Returns:
        str: The code with error handling added
        """

        # Add error handling to the code
        # This is a placeholder. Replace with actual implementation.
        # For example, we can add try-except blocks around function calls
        # and check for null values before accessing variables
        # As this is a placeholder, the actual implementation will depend on the specific requirements and the nature of the code to be hardened.
        return code

    def _improve_security(self, code: str) -> str:
        """
        Improves the security of the given code

        Parameters:
        code (str): The code whose security is to be improved

        Returns:
        str: The code with improved security
        """

        # Improve the security of the code
        # This is a placeholder. Replace with actual implementation.
        # For example, we can sanitize inputs to prevent SQL injection
        # and use secure functions for handling sensitive data
        # As this is a placeholder, the actual implementation will depend on the specific requirements and the nature of the code to be hardened.
        return code
