class CodeOptimizer:
    """
    A class used to optimize the given code

    ...

    Attributes
    ----------
    None

    Methods
    -------
    optimize_code(code: str) -> str:
        Optimizes the given code and returns the optimized code
    """

    def optimize_code(self, code: str) -> str:
        """
        Optimizes the given code

        Parameters:
        code (str): The code to be optimized

        Returns:
        str: The optimized code
        """

        # Implement the code optimization logic here
        # This is a placeholder for the actual code optimization logic
        # In a real-world scenario, this could involve tasks such as removing
        # unnecessary spaces, simplifying expressions, inlining functions, etc.
        optimized_code = self._remove_unnecessary_spaces(code)
        optimized_code = self._simplify_expressions(optimized_code)
        optimized_code = self._inline_functions(optimized_code)

        return optimized_code

    def _remove_unnecessary_spaces(self, code: str) -> str:
        """
        Removes unnecessary spaces from the given code

        Parameters:
        code (str): The code from which to remove unnecessary spaces

        Returns:
        str: The code with unnecessary spaces removed
        """

        # Implemented the logic to remove unnecessary spaces from the code
        return ' '.join(code.split())

    def _simplify_expressions(self, code: str) -> str:
        """
        Simplifies expressions in the given code

        Parameters:
        code (str): The code in which to simplify expressions

        Returns:
        str: The code with simplified expressions
        """

        # This is a placeholder. Replace with actual implementation.
        return code

    def _inline_functions(self, code: str) -> str:
        """
        Inlines functions in the given code

        Parameters:
        code (str): The code in which to inline functions

        Returns:
        str: The code with functions inlined
        """

        # This is a placeholder. Replace with actual implementation.
        return code
